camel-k/2.9.x/configuration/configuration.md
# Configure Integrations

Camel K is highly configurable and attempts to be as much as automatic as possible in order to provide a nice development experience. However, as soon as you start playing harder you will need to provide more tuning to your applications. In this section we’re exploring specifically Integration configuration, make sure not to get confused with the [IntegrationPlatform configuration](../installation/integrationplatform.md) section, which influences the general building and publishing behavior.

We can distinguish a series of different configurations for an Integration:

-   Build time configuration
    
-   Runtime configuration
    
-   Deployment configuration
    

## Build time configuration

Most of the time you won’t need to influence the building process. There may be circumstances where you need to provide a given Maven dependency to your application, provide some build time property or fine tune the application and the container image resulting from the build process.

Camel K does the best it can to discover automatically dependencies required by your application. However, when you’re using external code or the operator can’t discover dependencies, you’ll need to add them manually. See more in the [dependencies](dependencies.md) section.

Build time properties are the configuration injected during the building of the project. They are mainly used by Camel Quarkus and you may not need at all depending on the kind of applications you’re building. See more in the [build time properties](build-time-properties.md) section.

If you want to optimize your application to run natively on the cloud, then you may see how to [run your application with Quarkus Native compilation](quarkus-native.md).

While building the container image, the operator will use a default JDK based image. See how you can [change the default base image](base-image.md).

## Runtime configuration

The runtime configuration are probably the ones you’ll be using mostly during your development. Majority of the time you will need to provide [Camel properties](camel-properties.md), [runtime configuration](runtime-config.md) and [runtime resources](runtime-resources.md) files.

Another configuration you may be interested in controlling is the [Camel runtime version](runtime-version.md).

## Deployment configuration

The goal of the operator is to simplify the building and deployment process of a Camel application on the cloud. Most of the time the default settings to configure the deployment resources should be enough. However, if you need to fine tune the final resulting deployment, then you need to know how to configure the so called [Camel K traits](../traits/traits.md).